--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="ms-auto">
       <ul class="navbar-nav mb-2 mb-lg-0">
-        <small><a class="nav-link" href="https://techfolios.github.io">Made with Techfolios</a></small>
+        <small><a class="nav-link" href="https://techfolios.github.io">Serrano &copy; 2023</a></small>
       </ul>
     </div>
   </div>
